--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # API keys and secrets
 .env
 .env.*
+*.env
 
 # Dependency directory
 node_modules
@@ -16,4 +17,3 @@ Thumbs.db
 
 #useless things not pushed
 useless*.*
-
